# agentic-todo

./: .gitignore  Cargo.toml  PRD.md  README.md
.context/: backlog.md
.context/memory/: index.md  phase1-implementation-2026-03-07.md  phase2-search-implementation-2026-03-07.md  prd-project-update-2026-03-07.md  prd-projects-table-2026-03-07.md  prd-refine-2026-03-07.md
.context/specs/: index.md
.context/specs/archive/: phase2-search-vectors.md
skills/agentic-todo/: SKILL.md
src/: cli.rs  error.rs  main.rs
src/commands/: add.rs  delete.rs  get.rs  list.rs  mod.rs  project.rs  search.rs  update.rs
src/db/: migrations.rs  mod.rs  schema.rs
src/models/: backlog_item.rs  mod.rs  project.rs
src/output/: json.rs  mod.rs
src/search/: fts.rs  mod.rs  vector.rs
