[package]
name = "agent_backlogger"
version = "0.1.0"
edition = "2021"
description = "Agent-optimized project backlog CLI"
license = "MIT"
repository = "https://github.com/user/agent_backlogger"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
dirs = "5.0"
schemars = "0.8"

[[bin]]
name = "agent-backlogger"
path = "src/main.rs"
